Update privacy toggle to be per site (#811)
* Adds user whitelisting functionality and a whitelist management screen to the application
* Updates the privacy toggle to be per site rather than global, adding sites to the whitelist when toggled on
* Updates the privacy toggle to also control https upgrade behavior
* Adds "Manage Whitelist" and "Report Broken Site" buttons to the Privacy Dashboard
* Adds "Add to Whitelist" or "Remove from Whitelist" option, as applicable, to our Browser menu

--- a/app/src/main/res/values-bg/strings.xml
+++ b/app/src/main/res/values-bg/strings.xml
@@ -189,11 +189,11 @@
     <string name="bookmarksMenuTitle">Отметки</string>
     <string name="bookmarksActivityTitle">Отметки</string>
     <string name="bookmarkDeleteConfirmMessage">Наистина ли искате да изтриете отметка &lt;b&gt;%s&lt;/b&gt;?</string>
-    <string name="bookmarkDeleteConfirmTitle">Потвърдете</string>
+    <string name="dialogConfirmTitle">Потвърдете</string>
     <string name="bookmarkAddedFeedback">Добавена е отметка</string>
     <string name="bookmarkTitleHint">Заглавие на отметката</string>
     <string name="bookmarkUrlHint">URL адрес на отметката</string>
-    <string name="bookmarkSave">Запазване</string>
+    <string name="dialogSave">Запазване</string>
     <string name="bookmarkTitleEdit">Редактиране на отметка</string>
     <string name="noBookmarks">Все още няма добавени отметки</string>
     <string name="bookmarkOverflowContentDescription">Още опции за отметка %s</string>
