--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -189,11 +189,11 @@
     <string name="bookmarksMenuTitle">Marcadores</string>
     <string name="bookmarksActivityTitle">Marcadores</string>
     <string name="bookmarkDeleteConfirmMessage">Tem a certeza de que pretende eliminar o marcador &lt;b&gt;%s&lt;/b&gt;?</string>
-    <string name="bookmarkDeleteConfirmTitle">Confirmar</string>
+    <string name="dialogConfirmTitle">Confirmar</string>
     <string name="bookmarkAddedFeedback">Marcador adicionado</string>
     <string name="bookmarkTitleHint">Título do marcador</string>
     <string name="bookmarkUrlHint">URL do marcador</string>
-    <string name="bookmarkSave">Guardar</string>
+    <string name="dialogSave">Guardar</string>
     <string name="bookmarkTitleEdit">Editar marcador</string>
     <string name="noBookmarks">Ainda não foram adicionados marcadores</string>
     <string name="bookmarkOverflowContentDescription">Mais opções para o marcador %s</string>
