--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -212,11 +212,11 @@
     <string name="bookmarksMenuTitle">Закладки</string>
     <string name="bookmarksActivityTitle">Закладки</string>
     <string name="bookmarkDeleteConfirmMessage">Вы действительно хотите удалить закладку &lt;b&gt;%s&lt;/b&gt;?</string>
-    <string name="bookmarkDeleteConfirmTitle">Подтвердить</string>
+    <string name="dialogConfirmTitle">Подтвердить</string>
     <string name="bookmarkAddedFeedback">Закладка добавлена</string>
     <string name="bookmarkTitleHint">Название закладки</string>
     <string name="bookmarkUrlHint">URL закладки</string>
-    <string name="bookmarkSave">Сохранить</string>
+    <string name="dialogSave">Сохранить</string>
     <string name="bookmarkTitleEdit">Редактировать закладку</string>
     <string name="noBookmarks">Закладок пока нет</string>
     <string name="bookmarkOverflowContentDescription">Другие параметры управления закладкой %s</string>
