--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,5 +1,6 @@
 ## What's new in this release?
-Bug fixes and other improvements.
+The Privacy protection toggle now allows you to whitelist individual sites instead of disabling Privacy Protection for all sites.
+You can now fireproof a website to stay signed in when clearing data.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
