update version and release notes

--- a/app/version/release-notes
+++ b/app/version/release-notes
@@ -1,6 +1,5 @@
 ## What's new in this release?
-The Privacy protection toggle now allows you to whitelist individual sites instead of disabling Privacy Protection for all sites.
-You can now fireproof a website to stay signed in when clearing data.
+We've improved the animation in the URL bar that shows you when the app blocks third party trackers.
 
 ## Have feedback?
 You can always reach us at https://duckduckgo.com/feedback.
